plugins {
    id 'java'
    id 'maven-publish'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.springframework.boot' version '3.2.0'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url = uri("${System.getProperty('user.home')}/.m2/repository")
        }
    }
}

group = 'net.barrage.tegridy'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.30'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.glassfish.expressly:expressly:5.0.0'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation group: 'com.google.auto.service', name: 'auto-service', version: '1.1.1'

    annotationProcessor group: 'com.google.auto.service', name: 'auto-service', version: '1.1.1'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation 'com.google.testing.compile:compile-testing:0.21.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
}

test {
    useJUnitPlatform()
}

tasks.test {
    testLogging.showStandardStreams = true
    testLogging.exceptionFormat = 'full'
}